--- a/styles1.css
+++ b/styles1.css
@@ -102,7 +102,7 @@ h3,h2,h1 {
 /* Textarea */
 textarea {
   width: 80%;
-  max-width: 90%;
+  max-width: 700px;
   height: 120px;
   font-size: 16px;
   padding: 12px;
